1 November 2011: Wouter
	- dns over ssl support as a client, ssl-upstream yes turns it on.
	  It performs an SSL transaction for every DNS query (250 msec).

31 October 2011: Wouter
	- dns over ssl support, ssl-service-pem and ssl-service-key files
	  can be given and then TCP queries are serviced wrapped in SSL.

27 October 2011: Wouter
	- lame-ttl and lame-size options no longer exist, it is integrated
	  with the host info.  They are ignored (with verbose warning) if
	  encountered to keep the config file backwards compatible.
	- fix iana-update for changing gzip compression of results.
	- fix export-all-symbols on OSX.

26 October 2011: Wouter
	- iana portlist updated.
	- Infra cache stores information about ping and lameness per IP, zone.
	  This fixes bug #416.
	- fix iana_update target for gzipped file on iana site.

24 October 2011: Wouter
	- Fix resolve of partners.extranet.microsoft.com with a fix for the
	  server selection for choosing out of a (particular) list of bad
	  choices. (bug#415)
	- Fix make_new_space function so that the incoming query is not
	  overwritten if a jostled out query causes a waiting query to be
	  resumed that then fails and sends an error message.  (Thanks to
	  Matthew Lee).

21 October 2011: Wouter
	- fix --enable-allsymbols, fptr wlist is disabled on windows with this 
	  option enabled because of memory layout exe vs dll.

19 October 2011: Wouter
	- fix unbound-anchor for broken strptime on OSX lion, detected
	  in configure.
	- Detect if GOST really works, openssl1.0 on OSX fails.
	- Implement ipv6%interface notation for scope_id usage.

17 October 2011: Wouter
	- better documentation for inform_super (Thanks Yang Zhe).

14 October 2011: Wouter
	- Fix for out-of-memory condition in libunbound (thanks
	  Robert Fleischman).

13 October 2011: Wouter
	- Fix --enable-allsymbols, it depended on link specifics of the
	  target platform, or fptr_wlist assertion failures could occur.

12 October 2011: Wouter